<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSelecBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/seleccion_boton" />

        <Spinner
            android:id="@+id/spinnerBotones"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSeleccionAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/seleccion_audio" />

        <Button
            android:id="@+id/btnSeleccionAudio"
            android:layout_width="250dp"
            android:layout_height="61dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/btn_seleccion_audio" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvColorFondo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/seleccion_color_alerta" />

        <View
            android:id="@+id/vistaPreviaColor"
            android:layout_width="21dp"
            android:layout_height="57dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSeleccionColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_seleccion_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSeleccionPicto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selecciona_picto" />

        <ImageView
            android:id="@+id/vistaPreviaPicto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnSeleccionPicto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selecciona_pictograma" />
    </LinearLayout>

</LinearLayout>